restore: bring back test documentation stripped by the repository-pattern rewrite
The agent rewrote six test files wholesale when migrating from query services
to repositories, stripping class-level Javadoc, coverage plans (B1/B2/…),
section headers, and inline comments. These are unrelated to the refactor.

Restore each file from bed514e (the branch base) and apply only the minimal
repository-pattern changes on top:
  - MessageServiceTest: MessageQueryService → MessageRepository (getMessages/listByAppointment)
  - GroupServiceTest: GroupMember.list() stub → find().list() (repository now calls find)
  - FriendshipServiceTest: "throws IllegalStateException" tests updated to assert
    silent filtering (service behaviour changed to filter rather than throw)

All other files (SettingsServiceTest, PushSubscriptionServiceTest,
AppointmentParticipationServiceTest) are restored verbatim — their static
Panache stubs still work because the repositories delegate to the same static
entity calls that PanacheMock intercepts.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>